--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_7177c77 {clip:rect(0px,960px,540px,0px);}#txt0_7177c77 {font-family:PFnb; font-size:18px; letter-spacing:3px; line-height:21px; font-weight:bold; color:#000000;}#txt1_7177c77,#txt2_7177c77,#txt3_7177c77 {font-family:fnt4; font-size:18px; line-height:26px; color:#000000;}
+#spr1_523cbc5d {clip:rect(0px,960px,540px,0px);}#txt0_523cbc5d {font-family:PFnb; font-size:18px; letter-spacing:3px; line-height:21px; font-weight:bold; color:#000000;}#txt1_523cbc5d,#txt2_523cbc5d,#txt3_523cbc5d {font-family:fnt4; font-size:18px; line-height:26px; color:#000000;}
