--- a/data/slide2.css
+++ b/data/slide2.css
@@ -1,1 +1,1 @@
-#spr1_7177ff1 {clip:rect(0px,960px,540px,0px);}#txt0_7177ff1 {font-family:fnt4; font-size:18px; line-height:26px; color:#000000;}#spr20_7177ff1 {display:none;}
+#spr1_523cbe22 {clip:rect(0px,960px,540px,0px);}#txt0_523cbe22 {font-family:fnt4; font-size:18px; line-height:26px; color:#000000;}#spr18_523cbe22 {display:none;}
