--- a/data/slide7.css
+++ b/data/slide7.css
@@ -1,1 +1,1 @@
-#spr1_717bdc5 {clip:rect(0px,960px,540px,0px);}#txt0_717bdc5 {font-family:PFnb; font-size:24px; line-height:28px; font-weight:bold; color:#000000;}#spr8_717bdc5 {display:none;}
+#spr1_523cd39e {clip:rect(0px,960px,540px,0px);}#txt0_523cd39e {font-family:PFnb; font-size:24px; line-height:28px; font-weight:bold; color:#000000;}#spr8_523cd39e {display:none;}
