--- a/data/slide9.css
+++ b/data/slide9.css
@@ -1,1 +1,1 @@
-#spr1_717c5f3 {clip:rect(0px,960px,540px,0px);}#txt0_717c5f3 {font-family:PFnb; font-size:24px; line-height:28px; font-weight:bold; color:#000000;}#txt1_717c5f3,#txt2_717c5f3 {font-family:fnt4; font-size:18px; line-height:26px; color:#000000;}
+#spr1_523cd719 {clip:rect(0px,960px,540px,0px);}#txt0_523cd719 {font-family:PFnb; font-size:24px; line-height:28px; font-weight:bold; color:#000000;}#txt1_523cd719,#txt2_523cd719 {font-family:fnt4; font-size:18px; line-height:26px; color:#000000;}
